--- a/public/views/items/index.html
+++ b/public/views/items/index.html
@@ -12,5 +12,6 @@
       <p>Node.jsで複数ページを作るテスト。</p>
       <p><a href="/">TOPページへ</a></p>
     </section>
+    <h2>試験的な書き込み　</h2>
   </body>
 </html>
